crates/wdl-ast/tests/validation/float-out-of-range/source.errors
error: literal float exceeds the range for a 64-bit float (-1.7976931348623157e308..=+1.7976931348623157e308)
   ┌─ tests/validation/float-out-of-range/source.wdl:13:15
   │
13 │     Float h = 1234.1234e1234
   │               ^^^^^^^^^^^^^^ this literal float is out of range

